# swingtrader

./: .editorconfig  .gitignore  AGENTS.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  daily.yml  pages.yml
config/: avwap_anchors.yaml  data_sources.yaml  features.yaml  labels.yaml  regimes.yaml  scoring.yaml  universe.yaml
data/features/: AAOI.parquet  AAPL.parquet  ABBV.parquet  ABT.parquet  ACN.parquet  ADP.parquet  ALAB.parquet  ALMU.parquet  AMCR.parquet  AMZN.parquet  APD.parquet  ARES.parquet  ASML.parquet  AVGO.parquet  AXP.parquet  AXTI.parquet  BBEU.parquet  BDX.parquet  BE.parquet  BLK.parquet  BP.parquet  BRK-B.parquet  BW.parquet  CAR.parquet  CAT.parquet  CB.parquet  CBZ.parquet  CCJ.parquet  CEG.parquet  CIEN.parquet  CLS.parquet  CMCSA.parquet  CNXC.parquet  COHR.parquet  CRDO.parquet  (+114 more)
docs/: architecture.md  dashboard_design.md  index.html  operator_guide.md  packet_first_refactor.md  phase3.md  phase4.md  release_checklist.md  run_locally.md  selector_architecture.md
models/: meta.json
tests/: test_assessments.py  test_avwap.py  test_backtest.py  test_base_detect.py  test_config.py  test_dashboard.py  test_eligibility.py  test_features.py  test_ingest_smoke.py  test_intraday.py  test_journal.py  test_labels.py  test_models.py  test_packet_coherence_refactor.py  test_packet_first.py  test_packet_richness.py  test_phase_bc.py  test_phase_def.py  test_pipeline_smoke.py  test_reports.py  test_score_history.py  test_scoring.py  test_state_machine.py  test_symbols.py  test_utils.py  test_validation.py
(+1200 files in other folders)
