[project]
name = "swingtrader"
version = "0.1.0"
description = "Personal GitHub-native swing-trading research tool for scoring breakout setups"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "swingtrader" }]
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15",
    "pyyaml>=6",
    "yfinance>=0.2.40",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "python-dateutil>=2.9",
    "jinja2>=3.1",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/swingtrader"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]
ignore = ["E501", "RUF002", "RUF003", "RUF005", "SIM108"]  # RUF002/003: math symbols; SIM108: complex conditions read better as if/else

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "network: tests that require network access (skipped by default)",
]

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_ignores = true
ignore_missing_imports = true
